--- a/packages/project-tee-starter/package.json
+++ b/packages/project-tee-starter/package.json
@@ -40,7 +40,7 @@
     "@phala/dstack-sdk": "0.1.11",
     "@solana/web3.js": "1.98.2",
     "viem": "2.30.1",
-    "zod": "3.24.2"
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "prettier": "3.5.3",
