add resolutions back

--- a/packages/plugin-quick-starter/package.json
+++ b/packages/plugin-quick-starter/package.json
@@ -60,6 +60,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "resolutions": {
+    "zod": "^3.25.32"
+  },
   "agentConfig": {
     "pluginType": "elizaos:plugin:1.0.0",
     "pluginParameters": {
