--- a/packages/plugin-starter/package.json
+++ b/packages/plugin-starter/package.json
@@ -75,6 +75,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "resolutions": {
+    "zod": "^3.25.32"
+  },
   "agentConfig": {
     "pluginType": "elizaos:plugin:1.0.0",
     "pluginParameters": {
