--- a/packages/project-starter/package.json
+++ b/packages/project-starter/package.json
@@ -75,5 +75,8 @@
   "publishConfig": {
     "access": "public"
   },
+  "resolutions": {
+    "zod": "^3.25.32"
+  },
   "gitHead": "b165ad83e5f7a21bc1edbd83374ca087e3cd6b33"
 }
