--- a/packages/project-tee-starter/package.json
+++ b/packages/project-tee-starter/package.json
@@ -62,6 +62,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "resolutions": {
+    "zod": "^3.25.32"
+  },
   "gitHead": "b165ad83e5f7a21bc1edbd83374ca087e3cd6b33",
   "packageType": "project",
   "agentConfig": {
